Fixed alignment and old pages showing up

--- a/css/img.expander.css
+++ b/css/img.expander.css
@@ -1,6 +1,7 @@
 .gallery-items { 
   font-size: 0; 
   margin: 30px 0px;
+  padding: 0px;
   text-align: center;
 }
 
