--- a/css/styles.scss
+++ b/css/styles.scss
@@ -548,7 +548,7 @@ dt {
   display: block;
   position: absolute;
   //top: 1;
-  left: 48%;
+  left: 46%;
   display: none;
   margin-top: -20px;
 }
